# image-processor

./: CMakeLists.txt  LICENSE  README.md  image_processor.cpp
cmake/: AddCatch.cmake
exceptions/: argument_parser_exceptions.cpp  argument_parser_exceptions.h  bmp_handler_exceptions.cpp  bmp_handler_exceptions.h  filter_controller_exceptions.cpp  filter_controller_exceptions.h
filters/: base_filters.cpp  base_filters.h  filter_controller.cpp  filter_controller.h  filters.cpp  filters.h
io_handlers/: bmp_handler.cpp  bmp_handler.h
tests/: argument_parser_tests.cpp  filter_controller_tests.cpp
utils/: argument_parser.cpp  argument_parser.h  bmp.cpp  bmp.h
